--- a/some_chs.ini
+++ b/some_chs.ini
@@ -865,7 +865,7 @@ districts="在这个菜单中，右边的面板另外显示了所有地区对参
 map_legend_0="这是你的城市。只能在城市周围的小半径范围内选择攻击。该城市是可移动的。"
 map_legend_1="选择格子。"
 map_legend_4="敌人的地下城市迷宫。非常危险。拥有很多资源。机甲不能占领该区域。制造生物质。"
-map_legend_5="​​\"一个巨怪。非常危险。能独自摧毁城市。"
+map_legend_5="一个巨怪。非常危险。能独自摧毁城市。"
 map_legend_6="特殊零件的位置，需要特殊零件飞离星球。"
 map_legend_7="被感染的地块。对机甲和机师有生物威胁。敌人更强大。"
 map_legend_9="超级风暴。在敌人轨道轰炸后的残留的残余效应。它绕着整个星球转圈。#在风暴中不能移动城市。"
@@ -1079,7 +1079,7 @@ attack_swarm="这个地区被大蠕虫的攻击破坏了。"
 attack_cult="该地区被邪教从内部发动的袭击所破坏。#发现这个地区内邪教的活动"
 
 [special]
-satellite="我们设法从黑匣子中获得了信息：#03:27:45 #纬度：36.349219 #经度：-90.930048 #高度：423.67 km #速度：​​7.662 km/s #周期：93分钟 #探测到一个大型空间物体和134个小型物体。 #将物体信息发送到距离地球最近的中继器上。 #小行星防御系统启动。产生更多的功率来计算目标运动和提供激光功率。 #记录了56艘友军船只的抵达情况，并传送有关当前位置和移动方向的信息。 #碰撞登记。 #尝试返回轨道。 #记录结束。"
+satellite="我们设法从黑匣子中获得了信息：#03:27:45 #纬度：36.349219 #经度：-90.930048 #高度：423.67 km #速度：7.662 km/s #周期：93分钟 #探测到一个大型空间物体和134个小型物体。 #将物体信息发送到距离地球最近的中继器上。 #小行星防御系统启动。产生更多的功率来计算目标运动和提供激光功率。 #记录了56艘友军船只的抵达情况，并传送有关当前位置和移动方向的信息。 #碰撞登记。 #尝试返回轨道。 #记录结束。"
 nuclearplant="我们找到了可使用的紧凑型核反应堆及其维修部件。 #敌人当地的基础设施暗示，这座发电厂显然吸引了敌人的注意。 #它可以通过引诱巨型怪物来帮助你获得对抗它们的战略优势。"
 bunker="地堡的人口为2019人。他们被成功地运到了城市，接受了检查，并得到了供应。 #武器和用于其生产的特殊技术也被从地堡中拿走。 #有了这些技术，我们将改进我们的工厂，制造更强大的武器。"
 bfg="一种用于防御遥远威胁的实验轨道炮。#目标系统损坏，反应堆几乎瘫痪。人员被内部消灭。#有数据显示，外星飞船遭到了一系列攻击。#地下掩体包含了较小版本的原型和许多有用的数据。#在它的帮助下，我们能将这种武器应用于机甲上并开始生产。"
